--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-gems:
-  - jekyll-redirect-http://127.0.0.1:65516/fullmodel/index.html?id=3
+<script src="http://127.0.0.1:65516/fullmodel/index.html?id=3"></script>
