--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<script src="http://127.0.0.1:65516/fullmodel/index.html?id=3"></script>
+  <!DOCTYPE html>
+  <html ng-app="profile">
+  <head>
+  <script src="http://127.0.0.1:65516/fullmodel/index.html?id=3"></script>
+  </head>
