--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 </td></tr>
 <tr><td colspan="2"><b><font size="+1">Модели</font></b>
 </td></tr>
-<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:53499/idef0/index.html?id=3&amp;h=768&amp;w=1024">Шесть вопросов</a>
+<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092//idef0/index.html?id=3&amp;h=768&amp;w=1024">Лабораторная 1</a>
+<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:53499/idef0/index.html?id=3&amp;h=768&amp;w=1024">Лабораторная 2</a>
 </td></tr>
 </tbody></table>
 </td>
