--- a/index1.html
+++ b/index1.html
@@ -30,7 +30,7 @@
 </td></tr>
 <tr><td colspan="2"><b><font size="+1">Модели</font></b>
 </td></tr>
-<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092/idef0/index.html?id=3">Шесть вопросов</a>
+<tr><td valign="top" colspan="2"><a href="https://github.com/Keksylka/Keksylka.github.io/blob/master/index1.html">Шесть вопросов</a>
 
 </td></tr>
 </tbody></table>
