--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <tr><td colspan="2"><b><font size="+1">Модели</font></b>
 </td></tr>
 <tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092/idef0/index.html?id=3">Лабораторная 1</a>
+<tr><td valign="top" colspan="2"><a href="https://github.com/Keksylka/Keksylka.github.io/blob/master/index.html">Пробная</a>
 <tr><td valign="top" colspan="2"><a href="http://keksylka.github.io/blob/master/index2.html?id=3">Лабораторная 2</a>
 
 </td></tr>
