--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </td></tr>
 <tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092/idef0/index.html?id=3">Лабораторная 1</a>
 <tr><td valign="top" colspan="2"><a href="https://Keksylka.github.io/blob/master/index.html">Пробная</a>
-<tr><td valign="top" colspan="2"><a href="http://keksylka.github.io/blob/master/index2.html?id=3">Лабораторная 2</a>
+<tr><td valign="top" colspan="2"><a href="http://keksylka.github.io/blob/master/index2.html">Лабораторная 2</a>
 
 </td></tr>
 </tbody></table>
