--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 </td></tr>
 <tr><td colspan="2"><b><font size="+1">Модели</font></b>
 </td></tr>
-<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092/idef0/index.html?id=3">Шесть вопросов</a>
+<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092/idef0/index.html?id=3">1 Лабораторная</a>
+<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:55101/idef0/index.html?id=3&amp;h=768&amp;w=1024">2 Лабораторная</a>
+<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:55101/idef0/index.html?id=3&amp;h=768&amp;w=1024">Пробная</a>
+ 
 </td></tr>
 </tbody></table>
 </td>
