--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 </td></tr>
 <tr><td valign="top" colspan="2"><a href="http://127.0.0.1:54092/idef0/index.html?id=3">1 Лабораторная</a>
 <tr><td valign="top" colspan="2"><a href="http://127.0.0.1:55101/idef0/index.html?id=3&amp;h=768&amp;w=1024">2 Лабораторная</a>
-<tr><td valign="top" colspan="2"><a href="http://127.0.0.1:55101/idef0/index.html?id=3&amp;h=768&amp;w=1024">Пробная</a>
+<tr><td valign="top" colspan="2"><a href="http://Keksylka/Keksylka.github.io/blob/master/index1.html">Пробная</a>
+<tr><td valign="top" colspan="2"><a href="http://Keksylka.github.io/blob/master/index1.html">Пробная</a>
+<tr><td valign="top" colspan="2"><a href="http://github.io/blob/master/index1.html">Пробная</a>
+<tr><td valign="top" colspan="2"><a href="http://blob/master/index1.html">Пробная</a>
  
 </td></tr>
 </tbody></table>
