--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 </td></tr>
 <tr><td colspan="2"><b><font size="+1">Модели</font></b>
 </td></tr>
-<tr><td valign="top" colspan="2"><a href="https://github.com/Keksylka/Keksylka.github.io/blob/master/index.html>1 Лабораторная</a>
-<tr><td valign="top" colspan="2"><a href="https://github.com/Keksylka.github.io/blob/master/index.html>1 Лабораторная</a>
-<tr><td valign="top" colspan="2"><a href="https://Keksylka/Keksylka.github.io/blob/master/index.html>1 Лабораторная</a>
-<tr><td valign="top" colspan="2"><a href="https://blob/master/index.html>1 Лабораторная</a>
-<tr><td valign="top" colspan="2"><a href="https://github.io/blob/master/index.html>1 Лабораторная</a>
-<tr><td valign="top" colspan="2"><a href="https://Keksylka.github.io/blob/master/index.html>1 Лабораторная</a>
+<tr><td valign="top" colspan="2"><a href="https://github.com/Keksylka/Keksylka.github.io/blob/master/index.html">1 Попытка</a>
+<tr><td valign="top" colspan="2"><a href="https://github.com/Keksylka.github.io/blob/master/index.html">2 Попытка</a>
+<tr><td valign="top" colspan="2"><a href="https://Keksylka/Keksylka.github.io/blob/master/index.html">3 Попытка</a>
+<tr><td valign="top" colspan="2"><a href="https://blob/master/index.html">4 Попытка</a>
+<tr><td valign="top" colspan="2"><a href="https://github.io/blob/master/index.html">5 Попытка</a>
+<tr><td valign="top" colspan="2"><a href="https://Keksylka.github.io/blob/master/index.html">6 Попытка</a>
 
 </td></tr>
 </tbody></table>
